[package]
name = "bmdb"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
uart_16550 = "0.6.0"
spin = "0.5.2"
x86_64 = "0.14.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }

# The default test/bench harnesses pull in std, which is unavailable on bare metal.
[lib]
test = false
bench = false

[[bin]]
name = "bmdb"
test = false
bench = false

# QEMU flags used by `bootimage runner` when `cargo run`.
# -display none keeps it headless; -serial stdio routes COM1 to the terminal.
[package.metadata.bootimage]
run-args = [
    "-serial", "stdio",
    "-display", "none",
]

# Unwinding needs runtime support; abort keeps panic handling self-contained.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
