[workspace]
resolver = "2"
members = [
    "kernel",
    "core",
    "drivers/serial",
    "drivers/pci",
    "drivers/nvme",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
uart_16550 = "0.6.0"
spin = "0.5.2"
x86_64 = "0.14.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
bmdb-core = { path = "core" }
bmdb-serial = { path = "drivers/serial" }
bmdb-pci = { path = "drivers/pci" }
bmdb-nvme = { path = "drivers/nvme" }

# Unwinding needs runtime support; abort keeps panic handling self-contained.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
